--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
     <!-- Or for .png -->
-    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="icon" href="./images/logo.png" type="image/png">
     <style>
         .h-96 {
             height: 24rem; /* 384px */
