delete 12 interest rate free

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         <p class="text-gray-600 font-semibold mb-4">Duration: 8 hours |  Level: 2-4 </p>
                         <p class="text-gray-600 mb-4">This UNESCO World Heritage site features pre-Angkorian temples nestled in the forest. The surrounding trails offer a mix of cultural exploration and off-road adventure.</p>
                         <div class="flex justify-between items-center">
-                            <span class="text-blue-600 font-bold">$360 <span class="text-gray-600 text-sm">12 Interest free</span></span>
+                            <span class="text-blue-600 font-bold">$360 <span class="text-gray-600 text-sm"></span></span>
                             <a href="#" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700">See More</a>
                         </div>
                     </div>
@@ -383,7 +383,7 @@
                         <p class="text-gray-600 font-semibold mb-4">Duration: 8 hours |  Level: 2-4 </p>
                         <p class="text-gray-600 mb-4">A sacred hill with panoramic views, Phnom Santuk is accessible via a stone pathway flanked by statues. The ascent provides both a physical challenge and cultural insight.</p>
                         <div class="flex justify-between items-center">
-                            <span class="text-blue-600 font-bold">$360 <span class="text-gray-600 text-sm">12 Interest free</span></span>
+                            <span class="text-blue-600 font-bold">$360 <span class="text-gray-600 text-sm"></span></span>
                             <a href="#" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700">See More</a>
                         </div>
                     </div>
@@ -401,7 +401,7 @@
                         <p class="text-gray-600 font-semibold mb-4">Duration: 8 hours |  Level: 2-4 </p>
                         <p class="text-gray-600 mb-4">One of Southeast Asia's last lowland evergreen forests, Prey Lang offers dense jungle trails ideal for experienced riders seeking a rugged adventure.</p>
                         <div class="flex justify-between items-center">
-                            <span class="text-blue-600 font-bold">$360 <span class="text-gray-600 text-sm">12 Interest free</span></span>
+                            <span class="text-blue-600 font-bold">$360 <span class="text-gray-600 text-sm"></span></span>
                             <a href="#" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700">See More</a>
                         </div>
                     </div>
@@ -419,7 +419,7 @@
                         <p class="text-gray-600 font-semibold mb-4">Duration: 8 hours |  Level: 2-4 </p>
                         <p class="text-gray-600 mb-4">Located near the southeastern tip of the Tonlé Sap, this sanctuary features open deciduous forests and wetlands, providing diverse terrains for dirt biking.</p>
                         <div class="flex justify-between items-center">
-                            <span class="text-blue-600 font-bold">$360 <span class="text-gray-600 text-sm">12 Interest free</span></span>
+                            <span class="text-blue-600 font-bold">$360 <span class="text-gray-600 text-sm"></span></span>
                             <a href="#" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700">See More</a>
                         </div>
                     </div>
@@ -437,7 +437,7 @@
                         <p class="text-gray-600 font-semibold mb-4">Duration: 8 hours |  Level: 2-4 </p>
                         <p class="text-gray-600 mb-4">This Ramsar-listed wetland area includes flooded forests and waterways, offering unique off-road experiences, especially during the dry season when trails are more accessible.</p>
                         <div class="flex justify-between items-center">
-                            <span class="text-blue-600 font-bold">$360 <span class="text-gray-600 text-sm">12 Interest free</span></span>
+                            <span class="text-blue-600 font-bold">$360 <span class="text-gray-600 text-sm"></span></span>
                             <a href="#" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700">See More</a>
                         </div>
                     </div>
@@ -455,7 +455,7 @@
                         <p class="text-gray-600 font-semibold mb-4">Duration: 8 hours |  Level: 2-4 </p>
                         <p class="text-gray-600 mb-4">This trail offers a mix of terrains, including riverbanks, forested areas, and rural landscapes, providing both scenic beauty and challenging routes for riders.</p>
                         <div class="flex justify-between items-center">
-                            <span class="text-blue-600 font-bold">$360 <span class="text-gray-600 text-sm">12 Interest free</span></span>
+                            <span class="text-blue-600 font-bold">$360 <span class="text-gray-600 text-sm"></span></span>
                             <a href="#" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700">See More</a>
                         </div>
                     </div>
