--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
     
             <!-- Desktop Menu -->
             <div class="hidden md:flex items-center space-x-8">
-            <a href="index.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Home</a>
-            <a href="tours.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Tours</a>
-            <a href="our-bike.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Bike & Gear</a>
-            <a href="about.html" class="text-gray-700 hover:text-blue-600 transition duration-300">About</a>
-            <a href="why-us.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Why us</a>
-            <a href="contact.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Contact</a>
+            <a href="index.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">Home</a>
+            <a href="tours.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">Tours</a>
+            <a href="our-bike.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">Bike & Gear</a>
+            <a href="about.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">About</a>
+            <a href="why-us.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">Why us</a>
+            <a href="contact.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">Contact</a>
             <!-- Language Switcher Links (Desktop) -->
             <div class="flex items-center space-x-2">
-                <a href="index.html" class="text-gray-700 hover:text-blue-600 transition duration-300" aria-label="Switch to English" lang="en">EN</a>
+                <a href="index.html" class="text-gray-700 hover:text-red-600 transition duration-300" aria-label="Switch to English" lang="en">EN</a>
                 <span class="text-gray-700">|</span>
-                <a href="./kh/index-kh.html" class="text-gray-700 hover:text-blue-600 transition duration-300" aria-label="Switch to Khmer" lang="km">KH</a>
+                <a href="./kh/index-kh.html" class="text-gray-700 hover:text-red-600 transition duration-300" aria-label="Switch to Khmer" lang="km">KH</a>
             </div>
             </div>
     
@@ -170,9 +170,9 @@
             <div class="md:hidden flex items-center space-x-4">
             <!-- Language Switcher Links (Mobile) -->
             <div class="flex items-center space-x-2">
-                <a href="index.html" class="text-gray-700 hover:text-blue-600 transition duration-300" aria-label="Switch to English" lang="en">EN</a>
+                <a href="index.html" class="text-gray-700 hover:text-red-600 transition duration-300" aria-label="Switch to English" lang="en">EN</a>
                 <span class="text-gray-700">|</span>
-                <a href="./kh/index-kh.html" class="text-gray-700 hover:text-blue-600 transition duration-300" aria-label="Switch to Khmer" lang="km">KH</a>
+                <a href="./kh/index-kh.html" class="text-gray-700 hover:text-red-600 transition duration-300" aria-label="Switch to Khmer" lang="km">KH</a>
             </div>
             <button id="menu-toggle" class="text-gray-700 focus:outline-none" aria-label="Toggle mobile menu">
                 <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -186,12 +186,12 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="md:hidden hidden">
             <div class="pt-2 pb-3 space-y-1">
-            <a href="index.html" class="block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50">Home</a>
-            <a href="tours.html" class="block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50">Tours</a>
-            <a href="our-bike.html" class="block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50">Bike & Gear</a>
-            <a href="about.html" class="block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50">About</a>
-            <a href="why-us.html" class="block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50">Why us</a>
-            <a href="contact.html" class="block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50">Contact</a>
+            <a href="index.html" class="block px-3 py-2 text-gray-700 font-bold hover:text-red-600 hover:bg-gray-50">Home</a>
+            <a href="tours.html" class="block px-3 py-2 text-gray-700 font-bold hover:text-red-600 hover:bg-gray-50">Tours</a>
+            <a href="our-bike.html" class="block px-3 py-2 text-gray-700 font-bold hover:text-red-600 hover:bg-gray-50">Bike & Gear</a>
+            <a href="about.html" class="block px-3 py-2 text-gray-700 font-bold hover:text-red-600 hover:bg-gray-50">About</a>
+            <a href="why-us.html" class="block px-3 py-2 text-gray-700 font-bold hover:text-red-600 hover:bg-gray-50">Why us</a>
+            <a href="contact.html" class="block px-3 py-2 text-gray-700 font-bold hover:text-red-600 hover:bg-gray-50">Contact</a>
             </div>
         </div>
         </div>
