add some sections to tour and whatapp button to pages

--- a/about.html
+++ b/about.html
@@ -327,6 +327,10 @@
         </a>
     </section>
 
+    <!-- WhatsApp Button -->
+    <a href="https://wa.me/+85516700896" target="_blank" class="fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 transition">
+        <i class="fab fa-whatsapp text-2xl"></i>
+    </a>
     
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-16">
