--- a/our-bike.html
+++ b/our-bike.html
@@ -324,6 +324,11 @@
         </div>
     </section>      
 
+    <!-- Whatapp -->
+    <a href="https://wa.me/+85516700896" target="_blank" class="fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 transition">
+        <i class="fab fa-whatsapp text-2xl"></i>
+    </a>
+
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-16">
         <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8">
