--- a/contact.html
+++ b/contact.html
@@ -217,15 +217,20 @@
   
     <!-- Google Map -->
     <div class="mt-16 max-w-5xl mx-auto">
-      <h3 class="text-2xl font-bold mb-4 text-gray-800">Find Us Here</h3>
-      <div class="w-full h-80 rounded-lg overflow-hidden shadow-lg">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15641.805074720246!2d104.918038!3d11.556374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3109515cd151ce3f%3A0x96c728d4eb6aa9a7!2sPhnom%20Penh!5e0!3m2!1sen!2skh!4v1713456789123"
-          width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-    </div>
-  </section>
+        <h3 class="text-2xl font-bold mb-4 text-gray-800">Find Us Here</h3>
+        <div class="w-full h-80 rounded-lg overflow-hidden shadow-lg">
+            <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15641.805074720246!2d104.918038!3d11.556374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3109515cd151ce3f%3A0x96c728d4eb6aa9a7!2sPhnom%20Penh!5e0!3m2!1sen!2skh!4v1713456789123"
+            width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        </div>
+    </section>
+
+    <!-- whatapp -->
+    <a href="https://wa.me/+85516700896" target="_blank" class="fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 transition">
+        <i class="fab fa-whatsapp text-2xl"></i>
+    </a>    
     
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-16">
