--- a/index.html
+++ b/index.html
@@ -550,15 +550,15 @@
         </div>
     </section>
 
-    <!-- Newsletter -->
-    <section class="py-16">
+    <!-- subscribe to the newsletter -->
+    <section class="py-16 bg-gray-200">
         <div class="container mx-auto px-6 text-center">
-            <h2 class="text-3xl font-bold mb-4">Get Our Newsletters</h2>
-            <p class="text-gray-600 mb-6">Subscribe to receive the latest news and updates.</p>
-            <div class="flex justify-center">
-                <input type="email" placeholder="Enter your email" class="border border-gray-300 rounded-l-lg p-3 w-64 focus:outline-none">
-                <button class="bg-blue-600 text-white px-6 py-3 rounded-r-lg hover:bg-blue-700">Subscribe</button>
-            </div>
+            <h2 class="text-3xl font-bold text-gray-800 mb-4">Stay in the Loop</h2>
+            <p class="text-gray-600 mb-6 max-w-xl mx-auto">Subscribe to our newsletter for the latest updates on tours, gear, and exclusive offers!</p>
+            <form class="flex justify-center gap-4">
+                <input type="email" placeholder="Enter your email" class="px-4 py-2 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 w-full max-w-sm">
+                <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">Subscribe</button>
+            </form>
         </div>
     </section>
 
@@ -600,7 +600,11 @@
       
           </div>
         </div>
-    </section>      
+    </section>    
+    
+    <a href="https://wa.me/+85516700896" target="_blank" class="fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 transition">
+        <i class="fab fa-whatsapp text-2xl"></i>
+    </a>
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-16">
