--- a/tours.html
+++ b/tours.html
@@ -169,7 +169,7 @@
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
         L.marker([12.871059, 105.0407466]).addTo(map).bindPopup('Sambor Prei Kuk');
-        L.marker([12.6225, 104.9167]).addTo(map).bindPopup('Phnom Santuk');
+        L.marker([12.652146,104.9858089]).addTo(map).bindPopup('Phnom Santuk');
         L.marker([12.9667, 105.4667]).addTo(map).bindPopup('Prey Lang Wildlife Sanctuary');
         L.marker([13.4124693, 103.8644108]).addTo(map).bindPopup('Angkor Wat Temple');
         
@@ -295,6 +295,7 @@
         </div>
     </section>
 
+    <!-- Blog Section -->
     <section class="py-16">
         <div class="container mx-auto px-6">
             <h2 class="text-3xl font-bold text-center text-gray-800 mb-4">Dirt Biking Tips & Stories</h2>
@@ -335,7 +336,7 @@
             <p class="text-gray-600 text-center mb-12 max-w-2xl mx-auto">Gear up for your adventure with our top picks!</p>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-                    <img src="https://i.pinimg.com/474x/8b/be/94/8bbe9462480465c102cb0e77a21c886f.jpg" alt="Helmet" class="w-full h-48 object-cover">
+                    <img src="./images/Helmet.jpg" alt="Helmet" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-lg font-bold mb-2">Pro Dirt Helmet</h3>
                         <p class="text-gray-600 mb-4">Lightweight, durable, and designed for maximum protection.</p>
@@ -343,7 +344,7 @@
                     </div>
                 </div>
                 <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-                    <img src="https://i.pinimg.com/736x/88/7e/5c/887e5cc04b24b340fa94c38ef6992f1c.jpg" alt="Gloves" class="w-full h-48 object-cover">
+                    <img src="./images/GripMaster_Gloves.jpg" alt="Gloves" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-lg font-bold mb-2">GripMaster Gloves</h3>
                         <p class="text-gray-600 mb-4">Enhanced grip and comfort for long rides.</p>
@@ -351,7 +352,7 @@
                     </div>
                 </div>
                 <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-                    <img src="https://i.pinimg.com/474x/d9/32/8a/d9328ad05ec497b0c8955fbfed9ce197.jpg" alt="Bike" class="w-full h-48 object-cover">
+                    <img src="./images/TrailBlazer_Bike.jpg" alt="Bike" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-lg font-bold mb-2">TrailBlazer Bike</h3>
                         <p class="text-gray-600 mb-4">Perfect for rugged terrains and long-distance tours.</p>
@@ -408,6 +409,7 @@
         </div>
     </section>
 
+    <!-- Whatapp link -->
     <a href="https://wa.me/+85516700896" target="_blank" class="fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 transition">
         <i class="fab fa-whatsapp text-2xl"></i>
     </a>
