--- a/about.html
+++ b/about.html
@@ -114,9 +114,97 @@
         .hover-scale:hover { transform: scale(1.05); }
         .bg-gradient { background: linear-gradient(to bottom, #f7fafc, #edf2f7); }
         .shadow-xl { box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); }
+
+        /* Add to your <style> section in the <head> */
+            .spinner {
+            animation: rotator 1.4s linear infinite;
+        }
+
+        @keyframes rotator {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(270deg);
+            }
+        }
+
+        .path {
+            stroke-dasharray: 187;
+            stroke-dashoffset: 0;
+            transform-origin: center;
+            animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+        }
+
+        @keyframes colors {
+            0% {
+                stroke: #4285F4;
+            }
+            25% {
+                stroke: #DE3E35;
+            }
+            50% {
+                stroke: #F7C223;
+            }
+            75% {
+                stroke: #1B9A59;
+            }
+            100% {
+                stroke: #4285F4;
+            }
+        }
+
+        @keyframes dash {
+            0% {
+                stroke-dashoffset: 187;
+            }
+            50% {
+                stroke-dashoffset: 46.75;
+                transform: rotate(135deg);
+            }
+            100% {
+                stroke-dashoffset: 187;
+                transform: rotate(450deg);
+            }
+        }
+
     </style>
 </head>
 <body class="font-sans">
+    <!-- Add this right after the opening <body> tag -->
+    <div id="loading-spinner" class="fixed inset-0 flex items-center justify-center bg-white bg-opacity-80 z-50 hidden">
+        <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+            <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+        </svg>
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const spinner = document.getElementById('loading-spinner');
+            const links = document.querySelectorAll('a[href]:not([href^="mailto"]):not([href^="tel"]):not([href^="https"]):not([href^="#"])');
+
+            links.forEach(link => {
+                link.addEventListener('click', (e) => {
+                    e.preventDefault(); // Prevent immediate navigation
+                    const href = link.getAttribute('href');
+
+                    // Show the spinner
+                    spinner.classList.remove('hidden');
+
+                    // Simulate a delay for the spinner (optional, adjust as needed)
+                    setTimeout(() => {
+                        window.location.href = href; // Navigate to the new page
+                    }, 500); // 500ms delay to show the spinner
+                });
+            });
+
+            // Hide the spinner when the new page loads
+            window.addEventListener('load', () => {
+                spinner.classList.add('hidden');
+            });
+        });
+    </script>
+    
     <!-- Navigation -->
     <nav class="bg-white shadow-md py-4">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -332,17 +420,17 @@
         <i class="fab fa-whatsapp text-2xl"></i>
     </a>
     
-    <!-- Footer -->
+    <!-- Footer Section -->
     <footer class="bg-gray-800 text-white py-16">
         <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8">
             <div>
                 <img src="./images/logo.png" alt="Logo" class="h-13 mb-4">
                 <p class="text-gray-400 mb-4">DirtSurge Expeditions offers unforgettable adventures across the globe.</p>
                 <div class="flex space-x-4">
-                    <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
-                    <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://facebook.com" target="_blank" aria-label="Follow us on Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://instagram.com" target="_blank" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://youtube.com" target="_blank" aria-label="Follow us on YouTube"><i class="fab fa-youtube"></i></a>
+                    <a href="https://linkedin.com" target="_blank" aria-label="Follow us on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div>
@@ -368,11 +456,18 @@
             <div>
                 <h3 class="text-lg font-semibold mb-4">Contact</h3>
                 <p class="text-gray-400 mb-4">We Accept Payment:</p>
-                <img src="./images/payment.png" alt="Payment" sizes="70px" class="mb-4">
+                <img src="./images/payment.png" alt="Payment methods accepted" sizes="70px" class="mb-4">
                 <p class="text-gray-400">123 Adventure St, Travel City</p>
                 <p class="text-gray-400">Phone: +1 234 567 890</p>
                 <p class="text-gray-400">WhatsApp: +855 10 34 20 20</p>
                 <p class="text-gray-400">info@dirtsurgeexpeditions.com</p>
+            </div>
+        </div>
+        <div class="border-t border-gray-700 mt-8 pt-6 text-center">
+            <p class="text-gray-400 text-sm">© 2025 DirtSurge Expeditions. All rights reserved.</p>
+            <div class="flex justify-center space-x-4 mt-4">
+                <a href="#" class="text-gray-400 hover:text-white">Privacy Policy</a>
+                <a href="#" class="text-gray-400 hover:text-white">Terms of Service</a>
             </div>
         </div>
     </footer>
