update our team section

--- a/why-us.html
+++ b/why-us.html
@@ -312,7 +312,7 @@
                         src="https://i.pinimg.com/736x/62/be/fc/62befcd73146c7bfd460556143668f35.jpg" 
                         alt="Dirt bike tour adventure"
                     >
-                    <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent rounded-2xl"></div>
+                    <!-- <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent rounded-2xl"></div> -->
                 </div>
             </div>
         </div>
