--- a/about.html
+++ b/about.html
@@ -307,7 +307,8 @@
     <!-- Team Section -->
     <section class="py-16 px-4 bg-gray-100">
         <div class="max-w-7xl mx-auto">
-            <h2 class="text-4xl font-extrabold text-center mb-12 text-gray-800 fade-in">Meet the Team</h2>
+            <h2 class="text-4xl font-extrabold text-center text-gray-800 mb-4 animate-fade-in">Meet Our Expert Guides</h2>
+            <p class="text-gray-600 text-center mb-12 max-w-2xl mx-auto">Our guides are passionate riders with years of experience, ensuring you have a safe and thrilling adventure.</p>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Team Member 1 -->
                 <div class="bg-white rounded-xl shadow-xl overflow-hidden hover-scale fade-in">
@@ -317,6 +318,7 @@
                     <div class="p-6">
                         <h5 class="text-2xl font-bold text-gray-900 mb-2">Mr. Seavpeav Pech</h5>
                         <p class="text-gray-600">Tour Guide</p>
+                        <p class="text-gray-600">15+ years of dirt biking experience in Cambodia.</p>
                     </div>
                 </div>
                 <!-- Team Member 2 -->
@@ -327,6 +329,7 @@
                     <div class="p-6">
                         <h5 class="text-2xl font-bold text-gray-900 mb-2">Ms. Sokha Lim</h5>
                         <p class="text-gray-600">Expedition Leader</p>
+                        <p class="text-gray-600">Expert in navigating challenging jungle trails.</p>
                     </div>
                 </div>
                 <!-- Team Member 3 -->
@@ -337,6 +340,7 @@
                     <div class="p-6">
                         <h5 class="text-2xl font-bold text-gray-900 mb-2">Mr. Rithy Chan</h5>
                         <p class="text-gray-600">Mechanic & Support</p>
+                        <p class="text-gray-600">Specialist in cultural tours and history.</p>
                     </div>
                 </div>
             </div>
