--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     
             <!-- Desktop Menu -->
             <div class="hidden md:flex items-center space-x-8">
-                <a href="index.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">Home</a>
+                <a href="index.html" class="text-blue-600 font-bold hover:text-red-600 transition duration-300">Home</a>
                 <a href="tours.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">Tours</a>
                 <a href="our-bike.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">Bike & Gear</a>
                 <a href="about.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">About</a>
