--- a/contact.html
+++ b/contact.html
@@ -211,7 +211,7 @@
             <a href="our-bike.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">Bike & Gear</a>
             <a href="about.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">About</a>
             <a href="why-us.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">Why us</a>
-            <a href="contact.html" class="text-gray-700 font-bold hover:text-red-600 transition duration-300">Contact</a>
+            <a href="contact.html" class="text-blue-600 font-bold hover:text-red-600 transition duration-300">Contact</a>
             <!-- Language Switcher Links (Desktop) -->
             <div class="flex items-center space-x-2">
                 <a href="index.html" class="text-gray-700 hover:text-red-600 transition duration-300" aria-label="Switch to English" lang="en">EN</a>
@@ -245,7 +245,7 @@
             <a href="our-bike.html" class="block px-3 py-2 text-gray-700 font-bold hover:text-red-600 hover:bg-gray-50">Bike & Gear</a>
             <a href="about.html" class="block px-3 py-2 text-gray-700 font-bold hover:text-red-600 hover:bg-gray-50">About</a>
             <a href="why-us.html" class="block px-3 py-2 text-gray-700 font-bold hover:text-red-600 hover:bg-gray-50">Why us</a>
-            <a href="contact.html" class="block px-3 py-2 text-gray-700 font-bold hover:text-red-600 hover:bg-gray-50">Contact</a>
+            <a href="contact.html" class="block px-3 py-2 text-blue-600 font-bold hover:text-red-600 hover:bg-gray-50">Contact</a>
             </div>
         </div>
         </div>
